--- a/src/main/resources/views/categories.fxml
+++ b/src/main/resources/views/categories.fxml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 
 
 <?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.control.Button?>
-<FlowPane fx:controller="pl.yellowduck.netflix90.gui.CategoriesController"
-        maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-          prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Button fx:id="loadButton" onAction="#loadData" text="Załaduj"/>
-        <TableView fx:id="categoriesTable">
-            <columns>
-                <TableColumn prefWidth="175.0" text="Name">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="name"/>
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn prefWidth="250.0" text="Description">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="description"/>
-                    </cellValueFactory>
-                </TableColumn>
-            </columns>
-            <cursor>
-                <Cursor fx:constant="DEFAULT"/>
-            </cursor>
-        </TableView>
-    </children>
-</FlowPane>
+<VBox fx:controller="pl.yellowduck.netflix90.gui.CategoriesController"
+      maxHeight="-Infinity"
+      maxWidth="-Infinity"
+      minHeight="-Infinity"
+      minWidth="-Infinity"
+      prefHeight="400.0"
+      prefWidth="600.0"
+      xmlns="http://javafx.com/javafx/11.0.1"
+      xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Button fx:id="loadData" mnemonicParsing="false" text="Load Data" onAction="#loadData"/>
+      <TableView fx:id="categoriesTable" prefHeight="375.0" prefWidth="600.0">
+        <columns>
+          <TableColumn editable="false" prefWidth="191.20001220703125" text="Name" >
+            <cellValueFactory>
+                <PropertyValueFactory property="name"/>
+            </cellValueFactory>
+            </TableColumn>
+          <TableColumn editable="false" prefWidth="407.20001220703125" text="Description" >
+            <cellValueFactory>
+                <PropertyValueFactory property="description"/>
+            </cellValueFactory>
+            </TableColumn>
+        </columns>
+      </TableView>
+   </children>
+</VBox>
