--- a/src/main/resources/views/category.fxml
+++ b/src/main/resources/views/category.fxml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.CardPane?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
 
-<CardPane minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
-  <Label text="Name" />
-  <TextField fx:id="name" />
-  <Label text="Description" />
-  <TextField fx:id="description" />
-  <Button mnemonicParsing="false" text="Zapisz" />
-</CardPane>
+
+<VBox    fx:controller="pl.yellowduck.netflix90.gui.CategoryController"
+         id="savebutton"
+         maxHeight="-Infinity"
+         maxWidth="-Infinity"
+         minHeight="-Infinity"
+         minWidth="-Infinity"
+         prefHeight="400.0"
+         prefWidth="600.0"
+         xmlns="http://javafx.com/javafx/11.0.1"
+         xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label text="Name" />
+      <TextField fx:id="nameinput">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </TextField>
+      <Label text="Description" />
+      <TextField fx:id="descriptioninput" />
+      <Button mnemonicParsing="false" text="Save" onAction="#save" />
+   </children>
+</VBox>
